Acceptable workaround fix for issue 1 with button overlap

--- a/secondary/main.css
+++ b/secondary/main.css
@@ -367,7 +367,12 @@ footer div h4 a:hover {
   font-family: "Garamond";
   src: url("fonts/garamond/Garamond.ttf");
 }
-    
+
+main {
+
+    position: relative;
+}
+
 .masthead {
         background-image: url(img/masthead/trees-masthead-960x600.jpg);
         height: 600px;
@@ -458,6 +463,7 @@ p {
 
 .wrapper-vanilla {
     background-color: transparent;
+    position: relative;
 }
 
 .teaser {
@@ -471,14 +477,15 @@ img {
 }
 
 .teaser-image {
-    width: 48.25%;
+    width: 50%;
     height: auto;
     display: inline-block;
 }
 
 .image-right {
 
-    padding-right: 0; 
+    padding-right: 0;
+    margin-right: 0;
 }
 
 picture img {
@@ -487,7 +494,7 @@ picture img {
 }
 
 .teaser-text {
-    width: 48.25%;
+    width: 47.75%;
     display: inline-block;
 }
 
@@ -541,12 +548,12 @@ button:active {
 
 }
 
-
 footer {
     background-color: rgb(61,81,72);
     min-height: 150px;
-    display: block;
-    position: relative;
+    margin-top: 15px;
+    padding-top: 10px;
+
 }
 
 .inline{
